2012-11-11  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/compiling.html: Transform into XHTML 1.0 Transitional.

2012-11-03  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/compiling.html: Remove broken heading/navigation.
	Make a huge amount of markup fixes.

2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Remove question about building in the source tree.

2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* index.html (href): Adjust reference to libjit.

2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* faq.html: Update reference to Java language specification.
	Remove reference to recent snapshots.

2012-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* news.html: Use https for redhat.com.

2012-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* status.html: Remove comparison with Kaffe.

2012-10-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/nosb.html: Remove reference to sources.redhat.com.

2012-10-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* libgcj-platforms.html: Remove.

2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Update reference to rhug (and consolidate links).

2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* build-snapshot.html: Refer to GNU/Linux, simplify link to
	installation documentation, remove reference to an old FAQ,
	some editorial changes.
			 
2012-10-27  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* done.html: Adjust URL for rhug.
	Properly encode a special character.

2012-10-27  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html (My program seems to hang): Remove.

2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html (My libgcj build fails with "invalid use of undefined
	type struct sigcontext_struct"): Remove.

2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Replace references to sources.redhat.com by
	sourceware.org.
	Avoid a reference to CVS.
	Some style adjustments to the February 8, 2001 entry.

2011-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
