@@ -1,3 +1,7 @@
+2012-12-21  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* faq.html: Remove question about Linker bug on Solaris.
+
 2012-11-11  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* papers/compiling.html: Transform into XHTML 1.0 Transitional.
